<resources>
    <string name="app_name">" "</string>
    <string name="powerby">Powered by:</string>
    <string name="tit_entrar">ENTRAR</string>

    //MAIN
    <string name="txt_aula1">AULA 1</string>
    <string name="txt_aula2">AULA 2</string>
    <string name="txt_aula3">AULA 3</string>
    <string name="txt_aula4">AULA 4</string>
    <string name="txt_aula5">AULA 5</string>


    //CONVERSOR
    <string name="titulo_conversor">CONVERSOR</string>
    <string name="titulo_valor">VALOR A CONVERTER</string>
    <string name="tit_valconverter">VALOR CONVERTIDO</string>
    <string name="tit_moeda">Real (R$)</string>
    <string name="resultado_conversao">100,00</string>
    <string name="tit_dolar">DOLAR</string>
    <string name="tit_real">REAL</string>
    <string name="btn_converter">CONVERTER</string>
    <string name="valconvertido">R$ 100,00</string>

    //MOEDAS FRAGMENT
    <string name="tit_converterpara">CONVERTER PARA:</string>
    <string name="txtbtnconfirmar">CONFIRMAR</string>

    //MOVIE FRAGMENT
    <string name="tit_movie">QUAL SEU FILME PREFERIDO:</string>
    <string name="tit_capafilme">CAPA FILME:</string>
    <string name="tit_diretor">DIRETOR:</string>
    <string name="tit_ano">ANO:</string>
    <string name="btn_gravar">GRAVAR</string>
    <string name="msg_gravar">FILME GRAVADO COM SUCESSO</string>
    <string name="msg_error">ERRO AO ADICIONAR FILME</string>



</resources>